<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mdl.sinlov.android.websocket.app.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="WebSocket Server Info: " />

        <TextView
            android:id="@+id/tv_server_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:gravity="end"
            android:text="@string/hint_tv_server_info" />

        <EditText
            android:id="@+id/et_main_server_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_et_main_server_change"
            android:maxLines="1" />

        <Button
            android:id="@+id/btn_main_change_server"
            style="@style/Sinlov.Button.Menu.MW"
            android:text="@string/btn_main_change_server" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:gravity="start"
            android:text="@string/hint_tv_result_start" />


        <TextView
            android:id="@+id/tv_main_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_tv_result"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_light"
            android:gravity="end"
            android:text="@string/hint_tv_result_end" />

        <Button
            android:id="@+id/btn_main_connect"
            style="@style/Sinlov.Button.Menu.MW"
            android:text="Connect Server" />

        <Button
            android:id="@+id/btn_main_disconnect"
            style="@style/Sinlov.Button.Menu.MW"
            android:text="Disconnect Server" />

        <Button
            android:id="@+id/btn_main_send_message"
            style="@style/Sinlov.Button.Menu.MW"
            android:text="Send String Message" />

        <Button
            android:id="@+id/btn_main_send_byte"
            style="@style/Sinlov.Button.Menu.MW"
            android:text="Send byte" />

    </LinearLayout>

</ScrollView>
